# research

./: .gitignore
cochlea_filterbank/notes/: fast_gabor_filterbank.tex  fast_gabor_notes.tex  gabor_bank_1.tex  gabor_bank_2.tex  mixing_warping_and_bilinear_coeff.txt
cochlea_filterbank/scripts/: fastgabor.eigenspectrum.py  fastgabor.parameter_study.py  fastgabor.rescale_testing.py  fastgabor.simple.bilinear_scaling.py  fastgabor.simple.py  fastgabor.simple.rescale.py  gaborbrane_amplitude_responses.py  inverse_of_periodic_inhom_bidiag.py  inverse_of_periodic_tridiag.py  log.oct_2014.txt  scaling_one_pole.py  transfer_fun.gnuplot.txt  wavfile.py  wlet_bank.empirical_.py
deep-source-separation/: adversarial_ica.py  adversarial_ica2.py  case__kick_sin.py  case__lorenz_fm0.py  case__lorenz_fm1.py  case__lorenz_fm1__stiff.py  case__lorenz_funnel.py  case__lorenz_funnel__ver1.py  case__lorenz_funnel__ver2.py  case__lorenz_funnel__ver2_1.py  case__lorenz_funnel__was_working_once.py  case__lorenz_rossler.py  case__modsin_vs_sin.py  case__rectmod_sin.py  case__shallow_net_2sin.py  case__sin_rect.py  case__snd001.py  case__snd003.py  case__snds.py  case__sounds.py  case__square_sinmod.hdf5  case__square_sinmod.py  case__square_sinmod__002.py  case__square_sinmod__samefreq.py  case__two_sinusoids.py  coder_factories.py  cwt.py  data__lorenz_fm0.py  entropy.py  entropy_estimators.py  explore_minima.py  ica__2sin_single_channel_embedding.py  ica__lorenz_fm.py  imports.py  kick_sin.py  lorenz_fm0.py  lorenz_fm0.txt  lorenz_fm1__.py  lorenz_fm1_gan.py  modulated_sinusoids.py  (+19 more)
deep-source-separation/keras_tools/: extra_layers.py  functional_layers.py  test_signals.py  tools.py  upsampling.py
deep-source-separation/models/: dss_exper_20190102_003.hdf5  dss_exper_20190102_003.py  dss_exper_20190102_004.hdf5  kick_sin_1x1,noise0.1,up_zeros__1.hdf5  kick_sin__,up_zeros__1.hdf5  lorenz_fm0__feat16.hdf5  lorenz_fm0__tanh0.1__.hdf5  lorenz_fm0__tanh0__lr0.001__latent_noise=0.01__1300.hdf5  lorenz_fm0__tanh0__lr0.001__latent_noise=0.01__feat32__350.hdf5  lorenz_fm0__tanh0__lr0.002__noise=0.1__1000.hdf5  lorenz_fm0__tanh0__lr0.002__noisedecay__600.hdf5  lorenz_fm0__tanh0__lr0.004.hdf5  (+16 more)
neuronal_net/: algorithm.h  baklava.cpp  baklava.hpp  bootstrap.sh  learn_mnist.cpp  matrix.h  matrix.test.cpp  neural_net.cpp  neural_net.h  neural_net2.cpp  notes.txt  pop_back_iterator.h  pop_back_iterator.test.cpp  predict_time_series1.cpp  predict_time_series2.cpp  print_tools.h  scoped_pool_allocator.cpp
remote_sync/: CMakeLists.txt  run_analysis.py  stuart_landau_net.cpp  sync_analysis_tools.py  sync_study.py
(+290 files in other folders)
